[package]
name = "stream-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
fancy-regex = "0.10.0"
html-escape = "0.2.11"
log = "0.4.17"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[features]
