[package]
name = "stream-url"
version = "0.1.2"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
env_logger = "0.9.0"
fancy-regex = "0.10.0"
html-escape = "0.2.11"
js-sandbox = "0.1.6"
log = "0.4.17"
md5 = "0.7.0"
reqwest = { version = "0.11.10", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
 
[features]


[profile.release]
strip = true
