[package]
name = "backend"
version = "0.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
md5 = "0.7.0"
regex = "1.10.5"
reqwest = { version = "0.11.23", default-features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.39.1", features = ["full"] }

