[package]
name = "backend"
version = "0.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
md5 = "0.7.0"
regex = "1.11.1"
reqwest = { version = "0.12.4", default-features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }

