[package]
name = "cli"
version = "0.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
reqwest = { version = "0.11.23", default-features = false, features = [
	"rustls-tls",
] }
tokio = { version = "1.36.0", features = ["full"] }
backend = { path = "../backend", default-features = false }
