[package]
name = "cli"
version = "0.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
reqwest = { version = "0.12.4", default-features = false, features = [
	"rustls-tls",
] }
tokio = { version = "1.43.0", features = ["full"] }
backend = { path = "../backend", default-features = false }
