[package]
name = "server"
version = "0.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
axum = "0.7.7"
backend = { path = "../backend", default-features = false }
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.11.23", default-features = false, features = [
	"rustls-tls",
] }
serde = { version = "1.0.211", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
