[package]
name = "server"
version = "0.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
backend = { path = "../backend", default-features = false }
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.11.23", default-features = false, features = [
	"rustls-tls",
] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
