[package]
name = "server"
version = "0.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = "0.8.0"
backend = { path = "../backend", default-features = false }
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.4", default-features = false, features = [
	"rustls-tls",
] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
